# ai-mail

./: Dockerfile  docker-compose.yml  pyproject.toml
answering/: admin.py  apps.py  auth.py  forms.py  inbox_classifier.py  models.py  process.py  urls.py  views.py
answering/migrations/: 0001_initial.py  0002_initial.py  0003_tasktemplate_name_alter_inputmessage_sender.py  0004_tasktemplate_default_answer.py  0005_tasktemplate_use_openai.py  0005_tasktemplate_use_openai_openaaiauth.py  0006_merge_20240110_1111.py
answering/static/js/: task_view.js
answering/templates/: base.html  index.html
answering/templates/answering/: inbox_base.html  messages.html  task_form.html
classifier/: admin.py  classify.py  client.py  connection.py  models.py  server.py  tasks.py  tests.py  urls.py  views.py
classifier/management/commands/: launch.py
classifier/migrations/: 0001_initial.py  0002_alter_classifier_model.py  0003_classifier_min_threshold_alter_sample_label.py
classifier/templates/classifier/: send_texts.html  upload_samples.html
context/: admin.py  apps.py  crawler.py  embeddings.py  forms.py  models.py  services.py  tasks.py  tests.py  urls.py  vector_store.py  views.py
context/migrations/: 0001_initial.py  0002_alter_realm_embedding_dimension_and_more.py  0002_remove_realm_embedding_dimension_and_more.py  0003_merge_20240110_1111.py
context/templates/context/: search.html
core/: settings.py  urls.py
